
syntax = "proto3";

package auth;

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "jp.inaba.grpc.auth";

service ResendConfirmCode {
  rpc handle (ResendConfirmCodeRequest) returns (google.protobuf.Empty);
}

message ResendConfirmCodeRequest {
  string emailAddress = 1;
}